--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "My personal resume",
   "main": "resume.json",
   "dependencies": {
-    "jsonresume-theme-slick": "^0.1.16",
-    "jsonresume-theme-elegant": "^1.6.10"
+    "jsonresume-theme-classy": "^1.0.9",
+    "jsonresume-theme-elegant": "^1.6.10",
+    "jsonresume-theme-slick": "^0.1.16"
   },
   "devDependencies": {},
   "scripts": {
